Fix for padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ p {
 
 #work {
 	margin: 0 auto;
-	max-width: 600px;
+	max-width: 580px;
 }
 
 @media (max-width: 600px) {
